# aura

./: CMakeLists.txt  README.md  sgn_uthra_01.db
db/: sgn_uthra_01.db
docs/: design.txt
include/: AuraButton.h  BuyButton.h  CartButton.h  DBInterface.h  DBNames.h  FlavoursButton.h  OTPButton.h  OrdersButton.h  QuantityButton.h  ReminderButton.h  ShippingAddress.h  SoapButton.h  SoapSeller.h  StartButton.h  ViewButton.h  ViewCart.h
include/vigenere/: b64.h  encrypt.h  vigenere.h
src/: BuyButton.cpp  CartButton.cpp  DBInterface.cpp  DBNames.cpp  Daemon.cpp  FlavoursButton.cpp  OTPButton.cpp  OrdersButton.cpp  QuantityButton.cpp  ReminderButton.cpp  ShippingAddress.cpp  SoapButton.cpp  SoapSeller.cpp  StartButton.cpp  ViewButton.cpp  ViewCart.cpp  main.cpp
wdogsrvr/: CMakeLists.txt  WatchDog.cpp
